--- a/source/assets/stylesheets/_components.navigation.scss
+++ b/source/assets/stylesheets/_components.navigation.scss
@@ -128,7 +128,7 @@
 
   @include breakpoint(to-small) {
 
-    // background-color: $color-brand-tertiary;
+    background-color: $color-brand-quaternary;
 
     &.toggled-on .menu {
 
