--- a/source/assets/stylesheets/_settings.typography.scss
+++ b/source/assets/stylesheets/_settings.typography.scss
@@ -5,9 +5,9 @@
 //
 // Write about your typography choices for this WordCamp.
 //
-// **Typeface Name** is used as the font for WordCamp logo and for all headlines.
+// Josefin Sans is used as the font for WordCamp logo and for all headlines.
 //
-// **Typeface Name** is used for body text, buttons, forms etc.
+// Source Sans Pro is used for body text, buttons, forms etc.
 //
 // Style guide: 1.typography
 
