--- a/source/assets/stylesheets/_settings.other.scss
+++ b/source/assets/stylesheets/_settings.other.scss
@@ -17,6 +17,8 @@ $unit-s:                        rem(16);
 $unit-m:                        rem(24);
 $unit-l:                        rem(32);
 $unit-xl:                       rem(48);
+$unit-xxl:                      rem(64);
+
 $unit-default:                  rem(24);
 
 /* Container padding */
@@ -66,5 +68,6 @@ $extra-large-value:             80em; // 1280px
 /* Background images */
 $image-pattern-01:              url('https://2017.europe.wordcamp.org/files/2017/01/background-pattern-01.png');
 $image-realistic-ticket:        url('https://2018.europe.wordcamp.org/files/2017/11/futuristic-ticket.png');
+$image-divider:                 url('https://2018.europe.wordcamp.org/files/2017/12/divider.png');
 // $image-bullet-color:            url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-color.png');
 // $image-bullet-dark:             url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-dark.png');
