--- a/source/assets/stylesheets/_elements.headings.scss
+++ b/source/assets/stylesheets/_elements.headings.scss
@@ -19,12 +19,18 @@ h3,
 h4 {
 
   margin-bottom: $unit-default;
-  margin-top: 0;
+  margin-top: $unit-l;
 
   font-family: $font-headline;
   font-weight: $bold;
   line-height: 1;
   letter-spacing: -.025em;
+
+  &:first-child {
+
+    margin-top: 0;
+
+  }
 
 }
 
