--- a/source/assets/stylesheets/_trumps.images.scss
+++ b/source/assets/stylesheets/_trumps.images.scss
@@ -73,3 +73,20 @@
   }
 
 }
+
+.size-full {
+
+  .entry-content & {
+
+    @include breakpoint(extra-large) {
+
+      width: 140%;
+      margin-left: -20%;
+      margin-right: -20%;
+      max-width: 100vw;
+
+    }
+
+  }
+
+}
