--- a/source/assets/stylesheets/style.scss
+++ b/source/assets/stylesheets/style.scss
@@ -120,6 +120,7 @@
 @import "components.page-day-of";
 
 @import "components.helpers";
+@import "components.images";
 
 // Trumps
 //
@@ -129,7 +130,6 @@
 
 // Trumps: Helpers and overrides
 @import "trumps.utilities";
-@import "trumps.images";
 
 // Playing around
 @import "experimental";
