--- a/source/assets/stylesheets/_elements.headings.scss
+++ b/source/assets/stylesheets/_elements.headings.scss
@@ -51,21 +51,21 @@ h2 {
 
 h3 {
 
-  font-size: ms(2);
+  font-size: ms(0);
   color: $color-text;
 
   text-transform: uppercase;
-  letter-spacing: .05em;
+  letter-spacing: 0;
 
 }
 
 h4 {
 
-  font-size: ms(1);
-  color: $color-text;
+  font-size: ms(0);
+  color: $color-text-weak;
 
   text-transform: uppercase;
-  letter-spacing: .05em;
+  letter-spacing: 0;
 
 
 }
