--- a/source/assets/stylesheets/_elements.headings.scss
+++ b/source/assets/stylesheets/_elements.headings.scss
@@ -51,7 +51,7 @@ h2 {
 
 h3 {
 
-  font-size: ms(1);
+  font-size: ms(2);
   color: $color-text-strong;
   letter-spacing: -.025em;
 
@@ -60,7 +60,7 @@ h3 {
 h4 {
 
   font-size: ms(0);
-  color: $color-text-weak;
+  color: $color-text;
   text-transform: uppercase;
   letter-spacing: 0;
 
