Return to top update

--- a/source/assets/stylesheets/_components.helpers.scss
+++ b/source/assets/stylesheets/_components.helpers.scss
@@ -197,13 +197,13 @@
 
     white-space: nowrap;
 
-    &:before {
+    // &:before {
 
-      display: inline-block;
-      width: $unit-m;
-      content: "";
+    //   display: inline-block;
+    //   width: $unit-m;
+    //   content: "";
 
-    }
+    // }
 
     &:after {
 
