--- a/source/assets/stylesheets/_components.images.scss
+++ b/source/assets/stylesheets/_components.images.scss
@@ -3,7 +3,7 @@
 // Image examples
 //
 // Markup:
-// <img class="size-full" src="http://lorempixel.com/800/200/people/1/" />
+// <img class="size-full" src="../source/assets/images/placeholder-800x200.jpg" />
 //
 // Style guide: 6.images
 
