--- a/source/assets/stylesheets/style.scss
+++ b/source/assets/stylesheets/style.scss
@@ -109,6 +109,7 @@
 @import "components.sessions";
 @import "components.speakers";
 @import "components.sponsors";
+@import "components.accordions";
 
 @import "components.widgets";
 @import "components.widget-subscribe";
