--- a/source/assets/stylesheets/_components.accordions.scss
+++ b/source/assets/stylesheets/_components.accordions.scss
@@ -44,6 +44,15 @@
     &:before {
 
       content: "";
+      // content: "\002b";
+      // content: "+";
+
+      // font-size: 32px;
+      // line-height: 1;
+
+      // width: rem(32);
+      // height: rem(32);
+      // text-align: center;
 
       position: absolute;
       top: 50%;
@@ -81,6 +90,7 @@
 
     &:before {
 
+      // content: "\002d";
       border-top-color: $color-link;
       transform: translateY(-50%) rotate(180deg);
 
@@ -104,6 +114,12 @@
     display: block;
     height: auto;
     max-height: 2000px;
+
+  }
+
+  .accordion-content {
+
+    padding: $unit-m;
 
   }
 
