Button box shadow override

--- a/source/assets/stylesheets/_components.buttons.scss
+++ b/source/assets/stylesheets/_components.buttons.scss
@@ -59,6 +59,7 @@
     color: $color-text-strong-invert!important;
     background-color: $color-button-primary-hover!important;
     text-decoration: none;
+    box-shadow: none!important;
 
   }
 
