--- a/source/assets/stylesheets/_components.helpers.scss
+++ b/source/assets/stylesheets/_components.helpers.scss
@@ -99,7 +99,7 @@
 // Converts children to a grid layout. Use modifiers `grid-two`, `grid-three` or `grid-four` to create a column layout.
 //
 // Markup:
-// <div class="grid grid-three">
+// <div class="grid grid-wide grid-three">
 //   <div class="outline">
 //     <h3>Hello world</h3>
 //     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus laudan atibus commodi.</p>
@@ -157,6 +157,19 @@
   h4 {
 
     font-size: ms(0);
+
+  }
+
+  @include breakpoint(extra-large) {
+
+    &.grid-wide {
+
+      width: 140%;
+      margin-left: -20%;
+      margin-right: -20%;
+      max-width: 100vw;
+
+    }
 
   }
 
