Heading margins update

--- a/source/assets/stylesheets/_elements.headings.scss
+++ b/source/assets/stylesheets/_elements.headings.scss
@@ -35,19 +35,19 @@ h4 {
 
 h1 + h2 {
 
-  margin-top: $unit-s;
+  margin-top: $unit-xs;
 
 }
 
 h2 + h3 {
 
-  margin-top: $unit-s;
+  margin-top: $unit-xs;
 
 }
 
 h3 + h4 {
 
-  margin-top: $unit-s;
+  margin-top: $unit-xs;
 
 }
 
