--- a/source/assets/stylesheets/_components.speakers.scss
+++ b/source/assets/stylesheets/_components.speakers.scss
@@ -10,7 +10,9 @@
 // Style guide: 6.speakers
 
 .wcorg-speakers { 
-
+    display: flex;
+    flex-wrap:wrap;
+    flex-direction:row;
 }
 
 .wcorg-speaker:nth-child(3n) {
@@ -19,18 +21,19 @@
 
 .wcorg-speaker {
     display: flex;
-    flex-direction: column-reverse; 
+    flex-direction: column-reverse;
+    justify-content: flex-end;
 }
 
 
 .wcorg-speaker {
   padding: 0;
   border: 1px solid $color-border-weak;
-  width: 31%;
   float: left;
   border-radius: 3px;
-  margin-right: 3.5%;
   margin-bottom: 32px;
+  flex: 0 31%;
+  margin-right: 3.5%;
 
 
 .wcorg-speaker-description {
@@ -39,13 +42,16 @@
 
 h2 {
   margin: 0;
-  padding: 0;
+  padding: 16px;
+  line-height: 18px;
+  margin-top:10px
 }
 
 h2 a {
   color:#000000;
   font-size: ms(0, 17px);
-  margin: 0 0 0 16px;
+  margin: 0;
+  letter-spacing: .1px;
 }
     
 h2 a:hover {
@@ -58,7 +64,9 @@ h2 a:hover {
   width: 33%;
   height: 24px;
   display:block;
-  margin-top: -17px;
+  margin-left: -16px;
+  margin-top: -42px;
+  margin-bottom: 15px; 
   position: relative;
   z-index: 999;
 }
