--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -11,15 +11,38 @@
 
 .wcpt-schedule {
 
-  border: rem(4) solid $color-brand-secondary;
+  border: rem(1) solid $color-border-weak;
   margin-bottom: $unit-default;
   background-color: #fff;
+
+  @include breakpoint(extra-large) {
+
+    width: 140%;
+    margin-left: -20%;
+    margin-right: -20%;
+    max-width: 100vw;
+
+  }
+
+  a {
+
+    box-shadow: none;
+
+    &:hover,
+    &:focus,
+    &:active {
+
+      box-shadow: none;
+
+    }
+
+  }
 
   td,
   th {
 
     vertical-align: top;
-    border-color: $color-border-normal;
+    border-color: $color-border-weak;
 
   }
 
@@ -27,8 +50,9 @@
   .wcpt-col-track {
 
     border-top: none;
-    background-color: $color-brand-tertiary;
+    background-color: $color-brand-quaternary;
     color: $color-text-strong-invert;
+    text-transform: uppercase;
 
   }
 
@@ -56,6 +80,42 @@
   .wcpt-col-track {
 
     width: 30%;
+    width: 400px;
+
+    &:nth-child(2) {
+
+      .schedule-tracks & {
+
+        color: #fff;
+              background-color: $color-brand-primary;
+
+      }
+
+    }
+
+    &:nth-child(3) {
+
+      .schedule-tracks & {
+
+        color: #fff;
+        background-color: $color-brand-secondary;
+
+      }
+
+    }
+
+    &:nth-child(2),
+    &:nth-child(3),
+    &:nth-child(4) {
+
+      .schedule-workshops & {
+
+        color: $color-text-strong;
+        background-color: $color-brand-tertiary;
+
+      }
+
+    }
 
   }
 
@@ -90,15 +150,16 @@
     &.morning-break,
     &.afternoon-break {
 
+      color: $color-text-strong;
+      background-color: $color-grey-10;
+
       .wcpt-session-title {
 
         margin-bottom: 0;
 
-        font-size: ms(2);
+        font-size: ms(1);
         line-height: ms(1);
-        font-family: $font-brand-secondary;
         text-transform: uppercase;
-        color: $color-text-strong;
 
       }
 
@@ -129,7 +190,7 @@
     &.morning-break,
     &.afternoon-break {
 
-      background-color: $color-brand-secondary;
+      // background-color: $color-brand-secondary;
 
     }
 
@@ -164,14 +225,13 @@
 
       margin-bottom: $unit-s;
       display: block;
-      border: rem(4) solid $color-brand-secondary;
-      // border: 1px solid $color-border-normal;
+      // border: rem(4) solid $color-brand-secondary;
+      border: 1px solid $color-border-weak;
 
     }
 
     .wcb-track-track-1:before,
-    .wcb-track-track-2:before,
-    .wcb-track-track-3:before {
+    .wcb-track-track-2:before {
 
       display: block;
       padding: $unit-xs $unit-s;
@@ -181,28 +241,40 @@
       margin-bottom: $unit-xs;
       border: none;
 
-      color: $color-text-strong;
+      color: #fff;
+      text-transform: uppercase;
       font-weight: $bold;
-      background-color: $color-brand-secondary!important;
-
+      // background-color: $color-brand-secondary!important;
 
     }
 
     .wcb-track-track-1:before {
 
-      content: "Track 1";
+      background-color: $color-brand-primary!important;
 
     }
 
     .wcb-track-track-2:before {
 
-      content: "Track 2";
+      background-color: $color-brand-secondary!important;
+
+    }
+
+    .wcb-track-track-1:before {
+
+      content: "Milky Way Track";
+
+    }
+
+    .wcb-track-track-2:before {
+
+      content: "Andromeda Track";
 
     }
 
     .wcb-track-track-3:before {
 
-      content: "Track 3";
+      content: "Rosetta";
 
     }
 
@@ -226,7 +298,7 @@
       padding-bottom: $unit-s;
 
       color: $color-text-strong-invert;
-      background-color: $color-brand-tertiary;
+      background-color: $color-brand-quaternary;
 
     }
 
@@ -273,22 +345,33 @@ $session-type-color-business:    #575357; // Ash
     display: inline-block;
     padding: rem(1) rem(6);
 
-    border: 2px solid $session-color;
+    // border: 2px solid $session-color;
 
     position: absolute;
     bottom: $unit-s;
 
     font-size: ms(-1);
     line-height: ms(1);
+    text-transform: uppercase;
+    font-weight: $bold;
     color: $color-text-strong;
-    border-radius: $border-radius-large;
-    background: #fff;
+    border-radius: $border-radius-small;
+    background: $color-grey-10;
 
     content: "#{$session-label}";
 
   }
 
 }
+
+.wcb-session-category-lightning-talk {}
+.wcb-session-category-keynote {}
+.wcb-session-category-workshop-3h {}
+.wcb-session-category-workshop-60min {}
+.wcb-session-category-workshop-90min {}
+
+.opening-remarks {}
+
 
 
 // Development
