--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -9,20 +9,28 @@
 //
 // Style guide: 6.schedule
 
+.schedule-wide {
+
+  .wcpt-schedule {
+
+    @include breakpoint(extra-large) {
+
+      width: 140%;
+      margin-left: -20%;
+      margin-right: -20%;
+      max-width: 100vw;
+
+    }
+
+  }
+
+}
+
 .wcpt-schedule {
 
   border: rem(1) solid $color-border-weak;
   margin-bottom: $unit-default;
   background-color: #fff;
-
-  @include breakpoint(extra-large) {
-
-    width: 140%;
-    margin-left: -20%;
-    margin-right: -20%;
-    max-width: 100vw;
-
-  }
 
   a {
 
