Schedule mobile typo fix

--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -279,9 +279,9 @@
 
     }
 
-    .wcb-track-workshops-1:before,
-    .wcb-track-workshops-2:before,
-    .wcb-track-workshops-3:before {
+    .wcb-track-workshop-1:before,
+    .wcb-track-workshop-2:before,
+    .wcb-track-workshop-3:before {
 
       background-color: $color-brand-tertiary!important;
 
