--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -339,7 +339,8 @@
 
 }
 
-a.fav-session-button {
+div.wcb-session-favourite-icon a.fav-session-buttonm
+#content a.fav-session-button {
 
   color: $color-grey-20;
 
