Favourite session button update

--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -339,7 +339,7 @@
 
 }
 
-div.wcb-session-favourite-icon a.fav-session-buttonm
+div.wcb-session-favourite-icon a.fav-session-button,
 #content a.fav-session-button {
 
   color: $color-grey-20;
