--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -18,9 +18,22 @@
       width: 140%;
       margin-left: -20%;
       margin-right: -20%;
-      max-width: 100vw;
+      max-width: 98vw;
 
     }
+
+  }
+
+}
+
+.schedule-extra-wide {
+
+  @include breakpoint(extra-large) {
+
+    width: 180%;
+    margin-left: -40%;
+    margin-right: -40%;
+    max-width: 98vw;
 
   }
 
@@ -99,10 +112,11 @@
 
     &:nth-child(2) {
 
-      .schedule-tracks & {
+      .schedule-tracks &,
+      .schedule-full & {
 
         color: #fff;
-              background-color: $color-brand-primary;
+        background-color: $color-brand-primary;
 
       }
 
@@ -110,7 +124,8 @@
 
     &:nth-child(3) {
 
-      .schedule-tracks & {
+      .schedule-tracks &,
+      .schedule-full & {
 
         color: #fff;
         background-color: $color-brand-secondary;
@@ -124,6 +139,19 @@
     &:nth-child(4) {
 
       .schedule-workshops & {
+
+        color: $color-text-strong;
+        background-color: $color-brand-tertiary;
+
+      }
+
+    }
+
+    &:nth-child(4),
+    &:nth-child(5),
+    &:nth-child(6) {
+
+      .schedule-full & {
 
         color: $color-text-strong;
         background-color: $color-brand-tertiary;
