Header updates experiment

--- a/source/assets/stylesheets/_components.navigation.scss
+++ b/source/assets/stylesheets/_components.navigation.scss
@@ -126,6 +126,10 @@
 
   // }
 
+  // background-color: $color-brand-tertiary;
+  background-color: $color-brand-quaternary;
+  background-image: linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,.3));
+
   @include breakpoint(to-small) {
 
     background-color: $color-brand-quaternary;
@@ -266,7 +270,8 @@
 
         vertical-align: middle;
 
-        border-top-color: $color-brand-primary;
+        border-top-color: $color-brand-tertiary;
+        // border-top-color: $color-brand-primary;
 
         content: "";
 
