First commit speaker detail

--- a/source/assets/stylesheets/style.scss
+++ b/source/assets/stylesheets/style.scss
@@ -108,6 +108,7 @@
 @import "components.schedule";
 @import "components.sessions";
 @import "components.speakers";
+@import "components.speaker";
 @import "components.sponsors";
 @import "components.accordions";
 
