--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -427,7 +427,8 @@ div.wcb-session-favourite-icon a.fav-session-button {
 // Favorite background
 .wcb-favourite-session {
 
-  background-color: tint($color-link, 90%);
+  background-color: transparent;
+  background-image: linear-gradient(to bottom, rgba($color-link,.15), rgba(0,0,0,.0));
 
 }
 
