--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -9,7 +9,22 @@
 //
 // Style guide: 6.schedule
 
-.schedule-wide {
+.schedule-container {
+
+  margin-bottom: $unit-default;
+
+}
+
+.schedule-scroll {
+
+  position: relative;
+  overflow-x: auto;
+  border-right: 1px solid $color-border-weak;
+
+}
+
+.schedule-wide,
+.schedule-extra-wide {
 
   @include breakpoint(large) {
 
@@ -30,7 +45,7 @@
 
 }
 
-.schedule-wide.schedule-full {
+.schedule-extra-wide {
 
   @media (min-width: 100em) {
 
@@ -43,10 +58,20 @@
 }
 
 
+
+/*
+ * Table
+ */
+
 .wcpt-schedule {
 
+  max-width: 100%;
+  width: 100%;
+
   border: rem(1) solid $color-border-weak;
-  margin-bottom: $unit-default;
+  margin-bottom: 0;
+  // margin-bottom: $unit-default;
+
   background-color: #fff;
 
   a {
@@ -428,7 +453,7 @@ div.wcb-session-favourite-icon a.fav-session-button {
 .wcb-favourite-session {
 
   background-color: transparent;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,.0));
+  // background-image: linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,.0));
 
 }
 
