--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -17,9 +17,13 @@
 
 .schedule-scroll {
 
-  position: relative;
-  overflow-x: auto;
-  border-right: 1px solid $color-border-weak;
+  @include breakpoint(medium) {
+
+    position: relative;
+    overflow-x: auto;
+    border-right: 1px solid $color-border-weak;
+
+  }
 
 }
 
@@ -536,13 +540,13 @@ $session-type-color-business:    #575357; // Ash
     margin-left: $unit-xs;
     padding: rem(1) rem(6);
 
-    font-size: ms(-1);
+    font-size: ms(-2);
     line-height: ms(1);
     text-transform: uppercase;
-    font-weight: $regular;
+    font-weight: $bold;
     color: $color-text-strong;
-    border-radius: $border-radius-small;
-    background: $color-grey-10;
+    // border-radius: $border-radius-small;
+    // background: $color-grey-10;
 
   }
 
