--- a/source/assets/stylesheets/_components.header.scss
+++ b/source/assets/stylesheets/_components.header.scss
@@ -13,24 +13,24 @@
 
   position: relative;
 
-  // background-repeat: no-repeat;
-  // background-position: 50% 0;
-  // background-image: $site-hero-path-small;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-image: $site-hero-path-small;
   background-color: $site-hero-background;
 
-  // @include breakpoint(medium) {
+  @include breakpoint(medium) {
 
-  //   background-size: cover;
-  //   background-image: $site-hero-path-large;
-  //   background-position: 50% 100%;
+    background-size: cover;
+    background-image: $site-hero-path-large;
+    background-position: 50% 100%;
 
-  // }
+  }
 
-  // @media (min-width: 1800px) {
+  @media (min-width: 1800px) {
 
-  //   background-image: $site-hero-path-wide;
+    background-image: $site-hero-path-wide;
 
-  // }
+  }
 
   @include transition-fast();
 
@@ -57,25 +57,48 @@
 
 }
 
-.custom-header {
+// .custom-header {
 
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-image: $site-hero-path-wide-temp;
-  background-color: $site-hero-background;
+//   background-repeat: no-repeat;
+//   background-position: 50% 0;
+//   background-image: $site-hero-path-wide-temp;
+//   background-color: $site-hero-background;
 
-  @include breakpoint(medium) {
+//   @include breakpoint(medium) {
 
-    background-size: cover;
-    background-image: $site-hero-path-wide-temp;
-    background-position: 50% 100%;
+//     background-size: cover;
+//     background-image: $site-hero-path-wide-temp;
+//     background-position: 50% 100%;
 
-  }
+//   }
 
-  @media (min-width: 1800px) {
+//   @media (min-width: 1800px) {
 
-    background-image: $site-hero-path-wide-temp;
+//     background-image: $site-hero-path-wide-temp;
 
-  }
+//   }
 
-}
+// }
+
+// .wp-custom-header {
+
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   top: 0;
+
+//   img {
+
+//     max-width: none;
+
+//     position: absolute;
+//     bottom: 0;
+//     left: 50%;
+//     transform: translateX(-50%);
+//     height: 100%;
+//     min-width: 100vw;
+
+//   }
+
+// }
