--- a/source/assets/stylesheets/_components.speaker.scss
+++ b/source/assets/stylesheets/_components.speaker.scss
@@ -10,14 +10,16 @@
 // Style guide: 6.speaker
 
 
-.wcb_speaker {
-    height: 500px;
-}
+
 
 .wcb_speaker .entry-title{
-    width: 66%;
-    margin-left: 33%;
+    
     font-size: 1.3em;
+    
+    @include breakpoint(small) {
+      width: 66%;
+      margin-left: 33%; 
+    }
 }
 
 .wcb_speaker .entry-content {
@@ -26,14 +28,20 @@
     left: 0;
 }
 
-.speaker-avatar {
-    width: 31%;
-    float: left;
+.wcb_speaker .speaker-avatar {
+    max-width: 320px;
     margin-right: 2%;
+    margin-bottom: 25px;
     box-shadow: -8px 10px 0px 0px rgba(244,223,39,1);
+    @include breakpoint(small) {
+      width: 31%;
+      float: left;
+      margin-bottom: 0px;
+    }
 }
-.wcb_speaker .avatar{
-    margin-bottom: 0;
+
+.wcb_speaker .speaker-avatar img {
+    margin-bottom: 0px;
 }
 
 .wcb_speaker p{
@@ -42,17 +50,25 @@
 }
 
 .wcb_speaker .speaker-sessions {
-    width: 66%;
-    margin-left: 33%;
     text-transform: uppercase;
     font-size: 1.05em;
     letter-spacing: 1px;
+    @include breakpoint(small) {
+      width: 66%;
+      margin-left: 33%;
+    }
 }
 
 .wcb_speaker #speaker-session-names {
+    
     display: block;
-    width: 66%;
-    margin-left: 33%;
+    
+    @include breakpoint(small) {
+    
+      width: 66%;
+      margin-left: 33%;
+        
+    }
 }
 
 .wcb_speaker #speaker-session-names a {
